--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meu Portfólio - Início</title>
+    <title>Portfólio - Início</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -20,13 +20,12 @@
 
     <main>
         <section class="intro">
-            <h1>Bem-vindo ao meu portfólio!</h1>
-            <p>Olá, sou [Seu Nome], desenvolvedor web. Aqui você pode conhecer meus projetos, um pouco sobre mim e entrar em contato.</p>
+            <h1>Eu sou artista. Eu vejo coisas dentro das coisas.</h1>
         </section>
     </main>
 
     <footer>
-        <p>&copy; 2024 [Seu Nome]. Todos os direitos reservados.</p>
+        <p>&copy; 2024 Beatriz Cândido. Todos os direitos reservados.</p>
     </footer>
 </body>
 </html>
