--- a/projetos.html
+++ b/projetos.html
@@ -22,11 +22,7 @@
         <section class="projetos">
             <h1>Meus Projetos</h1>
             <div class="projeto">
-                <h2>Projeto 1: Website de E-commerce</h2>
-                <p>Um site de e-commerce responsivo feito com HTML, CSS e JavaScript.</p>
-            </div>
-            <div class="projeto">
-                <h2>Projeto 2: Portfólio Pessoal</h2>
+                <h2>O jeito que eu vejo o mundo</h2>
                 <p>Um portfólio interativo feito com HTML, CSS e React.</p>
             </div>
             <!-- Adicione mais projetos conforme necessário -->
