--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <section class="intro">
             <h1>Eu sou artista. Eu vejo coisas dentro das coisas.</h1>
         </section>
+        <a href="projetos.html" class="botao">Descobrir</a>
     </main>
 
     <footer>
