--- a/contato.html
+++ b/contato.html
@@ -17,7 +17,7 @@
             </ul>
         </nav>
     </header>
-
+​
     <main>
         <section class="contato">
             <h1>Entre em Contato</h1>
@@ -31,11 +31,11 @@
                 <label for="mensagem">Mensagem:</label>
                 <textarea id="mensagem" name="mensagem" rows="4" required></textarea>
                 
-                <button type="submit">Enviar</button>
+                <a href="mailto:exemplo@dominio.com" class="botao">Enviar</a>
             </form>
         </section>
     </main>
-
+​
     <footer>
         <p>&copy; 2024 [Seu Nome]. Todos os direitos reservados.</p>
     </footer>
