--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="intrfacee">
            <div class="logo">
              <a href="#">
-             <img src="imgs/" alt="logo site">
+             <img src="imgs/logo.png" alt="logo">
              </a> 
            </div><!--logo-->
 
