--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,7 +15,7 @@
 </head>
 <body>
     <header>
-        <div class="intrfacee">
+        <div class="intrface">
            <div class="logo">
              <a href="#">
              <img src="imgs/logo.png">
