--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,15 +10,19 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <!-- FIM GOOGLE FONTS-->
 
+    <!--BOOSTSTRAP ICONS-->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <!--FIM BOOSTRAP-->
+
     <link rel="stylesheet" href="style.css">
-    <title>Beatriz Cãndido</title>
+    <title>Beatriz Cândido</title>
 </head>
 <body>
     <header>
-        <div class="intrface">
+        <div class="interface">
            <div class="logo">
              <a href="#">
-             <img src="Portifólio/imgs/logo.png">
+             <img src="https://i.postimg.cc/MKkrT6nW/logo.png">
              </a> 
            </div><!--logo-->
 
@@ -35,8 +39,77 @@
                  <a href="#">
                     <button>Contato</button>
                  </a>
-           </div><!---btn-contato-->
+           </div><!--contato-->
         </div><!--interface-->
     </header>
+
+    <main>
+        <section class="topo-do-site">
+          <div class="interface">
+            <div class="flex">
+                <div class="txt-topo-site">
+                    <h1>Eu sou artista, eu vejo coisas dentro das coisas<span>.</span></h1>
+                    <p>Estou sempre triste, mas mantenho esse ar de invencível.</p>
+                    <div class="beatriz-contato">
+                        <a href="#">
+                            <button>Entre em contato</button>
+                        </a>
+                    </div>
+                </div>
+
+                <div class="img-topo-site">
+                    <img src="https://i.postimg.cc/mrhSjJPX/flor.png" alt=":)">
+                </div>
+            </div>
+          </div>
+        </section>
+
+        <section class="skills">
+            <div class="interface">
+                <h2 class="titulo">Minhas <span>skills</span></h2>
+                <div class="flex">
+                    <div class="skills-box">
+                        <i class="bi bi-file-earmark-image-fill"></i>
+                        <h3>Adobe Photoshop</h3>
+                        <p>Edições que dão vida ás suas imagens.</p>
+                    </div>
+
+                    <div class="skills-box">
+                        <i class="bi bi-vector-pen"></i>
+                        <h3>Adobe Ilustrator</h3>
+                        <p>Ilustrações que te levam ao seu objetivo.</p>
+                    </div>
+
+                    <div class="skills-box">
+                        <i class="bi bi-easel2-fill"></i>
+                        <h3>Branding</h3>
+                        <p>Planejamento de marca criativo e funcional.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="sobre">
+            <div class="interface">
+                <div class="flex">
+                  <div class="img-sobre">
+                    <img src="https://i.postimg.cc/sDwPxLRg/eu.png" alt="">
+                  </div>
+
+                  <div class="txt-sobre">
+                    <h2>Meu nome é <span>Beatriz Cândido</span></h2>
+                    <p>lallalllla</p>
+                    <p>alalalalla</p>
+
+                    <div class="redes-sociais">
+                        <a href="https://wa.me/11970463928"> <button><i class="bi bi-whatsapp"></i></button></a>
+                        <a href="https://encurtador.com.br/PjSKK"><button><i class="bi bi-linkedin"></i></button></a>
+                        <a href="mailto:beatrizalvarenga0404@hotmail.com"><button><i class="bi bi-envelope-fill"></i></button></a>
+                    </div>
+                  </div>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
