--- a/index.html
+++ b/index.html
@@ -110,6 +110,39 @@
                 </div>
             </div>
         </section>
+
+        <section class="trabalhos">
+            <div class="interface">
+                <h2 class="titulo">Alguns trabalhos</h2>
+                <div class="flex">
+                    <div class="img-port" style="background-image: url(https://i.postimg.cc/g2Ltmtjj/projetos-academicos-Prancheta-1.png);">
+                        <div class="overlay">Ilustrações</div>
+
+                    </div>
+                    <div class="img-port" style="background-image: url(https://i.postimg.cc/XJhq9vKn/projetos-Prancheta-1-c-pia.png);">
+                        <div class="overlay">Liars</div>
+                    </div>
+
+                    <div class="img-port" style="background-image: url(https://i.postimg.cc/NFd46SG6/projeto-2-Prancheta-1-c-pia-2.png);">
+                        <div class="overlay">Croquette's Gourmet</div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="formulario">
+            <div class="interface">
+                <h2 class="titulo">Fale comigo</h2>
+
+                <form action="">
+                    <input type="text" name="" id="" placeholder="Seu nome completo" required>
+                    <input type="text" name="" id="" placeholder="Seu e-mail" required>
+                    <input type="text" name="" id="" placeholder="Seu celular">
+                    <textarea name="" id="" placeholder="Sua mensagem" required></textarea>
+                    <div class="enviar"><input type="submit" value="ENVIAR"></div>
+                </form>
+            </div>
+        </section>
     </main>
 </body>
 </html>
