--- a/index.html
+++ b/index.html
@@ -144,5 +144,23 @@
             </div>
         </section>
     </main>
+
+    <footer>
+        <div class="interface">
+            <div class="line-footer">
+                <div class="flex">
+                    <div class="logo-footer">
+                        <img src="https://i.postimg.cc/25B8qks4/logo-footer-Prancheta-1.png" alt="logo">
+                    </div>
+
+                    <div class="redes-sociais">
+                        <a href="https://wa.me/11970463928"> <button><i class="bi bi-whatsapp"></i></button></a>
+                        <a href="https://encurtador.com.br/PjSKK"><button><i class="bi bi-linkedin"></i></button></a>
+                        <a href="mailto:beatrizalvarenga0404@hotmail.com"><button><i class="bi bi-envelope-fill"></i></button></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
