--- a/index.html
+++ b/index.html
@@ -28,15 +28,14 @@
 
            <nav class="menu-desktop">
             <ul>
-                <li><a href="#">Início</a></li>
+                <li><a href="https://beatrixie04.github.io/">Início</a></li>
                 <li><a href="#">Projetos</a></li>
                 <li><a href="#">Sobre mim</a></li>
-                <li><a href="#">Contato</a></li>
             </ul>
            </nav>
 
            <div class="beatriz-contato">
-                 <a href="#">
+                 <a href="mailto:beatriz0404@hotmail.com">
                     <button>Contato</button>
                  </a>
            </div><!--contato-->
@@ -50,11 +49,6 @@
                 <div class="txt-topo-site">
                     <h1>Eu sou artista, eu vejo coisas dentro das coisas<span>.</span></h1>
                     <p>Estou sempre triste, mas mantenho esse ar de invencível.</p>
-                    <div class="beatriz-contato">
-                        <a href="#">
-                            <button>Entre em contato</button>
-                        </a>
-                    </div>
                 </div>
 
                 <div class="img-topo-site">
@@ -98,8 +92,8 @@
 
                   <div class="txt-sobre">
                     <h2>Meu nome é <span>Beatriz Cândido</span></h2>
-                    <p>lallalllla</p>
-                    <p>alalalalla</p>
+                    <p>Sempre tive amor pela arte e pelo modo de expressão através de cores e formas, descobri no design um mundo repleto de possibilidades e caminhos para mostrar esse sentimento, e mais importante, minha personalidade e criatividade.</p>
+                    <p>Sou uma pessoa alegre, positiva e gentil, trabalho bem em equipe sendo proativa e prestativa sempre.</p>
 
                     <div class="redes-sociais">
                         <a href="https://wa.me/11970463928"> <button><i class="bi bi-whatsapp"></i></button></a>
